Added start script for production deployment

--- a/frontend/src/admin/admin.html
+++ b/frontend/src/admin/admin.html
@@ -17,40 +17,59 @@
         </div>
         <div class="banner"></div>
         <div class="creation">
-            <button class="candidate-creation">Candidate Creation</button>
-            <button class="election-cretion">Election Creation</button>
-            <button class="election-detail">Election Detail</button>
-        </div>
-        <span class="candidate-title">
-            <h1>Create Candidate</h1>
-        </span>
-        <div class="create-candidate-container">
-            <div class="nothing"></div>
-            <div class="candidate-container">
-                <div class="create-candidate">
-                    <div class="profile-name-container">
-                        <div class="profile"></div>
-                        <div class="name-electionid-container">
-                            <div class="name">
-                                <label for=""><input type="text" placeholder="Candidate Name"></label>
-
-                            </div>
-                            <div class="nickname"><label for=""><input type="text" placeholder="Nickname"></label></div>
-                            <div class="electionid"><label for=""> <input type="text" placeholder="Election ID"></label>
-                            </div>
-                            <div class="election-name"><span class="PE">Presedential Election</span></div>
-                        </div>
-                    </div>
-                    <div class="bio"><label for=""> <textarea name="" id="" cols="30" rows="10"></textarea></label>
-                    </div>
-                    <div class="create-now-container">
-                        <button class="create-now">Create Now</button>
-                    </div>
-                    <div class="nothing"></div>
+            <div class="candidate-creation hover">
+                <div class="image"></div>
+                <div class="creationButton">
+                    <button>Create Candidate</button>
                 </div>
             </div>
-            <div class="nothing"></div>
+            <div class="election-cretion hover">
+                <div class="image"></div>
+                <div class="creationButton">
+                    <button>Create Election</button>
+                </div>
+            </div>
+
+            <div class="election-detail hover">
+                <div class="image"></div>
+                <div class="creationButton">
+                    <button>Election Created By You</button>
+                </div>
+            </div>
         </div>
+    </div>
+
+    <span class="candidate-title">
+        <h1>Create Candidate</h1>
+    </span>
+    <div class="create-candidate-container">
+        <div class="nothing"></div>
+        <div class="candidate-container">
+            <div class="create-candidate">
+                <div class="profile-name-container">
+                    <div class="profile"></div>
+                    <div class="name-electionid-container">
+                        <div class="name">
+                            <label for=""><input type="text" placeholder="Candidate Name"></label>
+
+                        </div>
+                        <div class="nickname"><label for=""><input type="text" placeholder="Nickname"></label>
+                        </div>
+                        <div class="electionid"><label for=""> <input type="text" placeholder="Election ID"></label>
+                        </div>
+                        <div class="election-name"><span class="PE">Presedential Election</span></div>
+                    </div>
+                </div>
+                <div class="bio"><label for=""> <textarea name="" id="" cols="30" rows="10"></textarea></label>
+                </div>
+                <div class="create-now-container">
+                    <button class="create-now">Create Now</button>
+                </div>
+                <div class="nothing"></div>
+            </div>
+        </div>
+        <div class="nothing"></div>
+    </div>
     </div>
 
 </body>
