--- a/frontend/src/suraj/index.html
+++ b/frontend/src/suraj/index.html
@@ -11,7 +11,7 @@
         <div class="WebsiteTitle">
             Online Voting platform
         </div>
-        <div class="menu">
+        <div class="menu" onclick="">
             #
         </div>
     </div>
